# swa

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
.github/workflows/: ci.yml
affinity/boarding_pillars/: boarding_pillars.afdesign
affinity/swa_logo/: swa_logo.afdesign
core/: admin.py  urls.py
core/migrations/: 0001_initial.py  0002_candytype_destination_name_alter_destination_candy.py  0003_destination_code.py  0004_candytype_logo_alter_ticket_has_boarded.py  0005_ticket_boarding_pass_preview.py  0006_rename_tsa_precheck_ticket_standby.py  0007_alter_ticket_boarding_position.py
core/models/: __init__.py  destination.py  flight.py  gate.py  metadata.py  ticket.py
core/static/core/: base.css  button.css  display.css  form.css  message.css  navbar.css  table.css  ticket.css
core/static/core/boarding/: page.ts
core/static/core/display/: page.ts
core/static/core/home/: page.ts
core/static/core/standard/: message.ts  utils.ts
core/static/core/ticket/: page.ts
core/templates/core/: base.html  boarding.html  booking.html  display.html  flight.html  home.html  ticket.html
core/tests/: test_pytest_setup.py
core/views/: __init__.py  boarding.py  display.py  flight.py  ticket.py
core/views/tests/: test_boarding_position.py
label_printer/: pyproject.toml
label_printer/label_printer/: boarding_pass_printer.py
swa/: asgi.py  settings.py  urls.py  wsgi.py
